new map version, lots of fixes and experimental new features